Added ILM-SPI Franken version
Signed-off-by: Cameron Target <127965975+camerontarget14@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ experimental/spi/note_assistant_v2/backend/token.json
 experimental/spi/note_assistant_v2/frontend/.env.local
 experimental/spi/note_assistant_v2/frontend/package-lock.json
 experimental/spi/note_assistant_v2/frontend/package-lock.json
+experimental/cameron/backend/.env
+experimental/cameron/backend/venv
