added v2 QT version
Signed-off-by: Cameron Target <127965975+camerontarget14@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ experimental/spi/note_assistant_v2/frontend/package-lock.json
 experimental/spi/note_assistant_v2/frontend/package-lock.json
 experimental/cameron/backend/.env
 experimental/cameron/backend/venv
+experimental/cameron/frontend_v2/venv
