--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ experimental/spi/note_assistant_v2/frontend/package-lock.json
 experimental/cameron/backend/.env
 experimental/cameron/backend/venv
 experimental/cameron/frontend_v2/venv
+experimental/cameron/frontend_v3/venv
