added API documentation, fixed some front end issues.
Signed-off-by: camerontarget14 <127965975+camerontarget14@users.noreply.github.com>

--- a/experimental/cameron/backend/.env.example
+++ b/experimental/cameron/backend/.env.example
@@ -1,22 +1,55 @@
-# ShotGrid Configuration (Optional)
+# DNA Dailies Notes Assistant - Backend Configuration
+#
+# IMPORTANT: Most settings are configured via the frontend UI (Preferences dialog)
+# and saved automatically to this file. You only need to set these manually if:
+# 1. You want to pre-configure before first frontend launch
+# 2. You're running backend standalone without the Qt frontend
+# 3. You're setting up for the first time
+#
+# Copy this file to .env and add your credentials
+
+# =============================================================================
+# LLM API KEYS (Configure via Frontend Preferences or set here)
+# =============================================================================
+# At least one LLM provider is required for AI note generation
+OPENAI_API_KEY=
+CLAUDE_API_KEY=
+GEMINI_API_KEY=
+
+# =============================================================================
+# SHOTGRID CONFIGURATION (Optional - Configure via Frontend Preferences)
+# =============================================================================
 SHOTGRID_URL=
 SHOTGRID_SCRIPT_NAME=
 SHOTGRID_API_KEY=
-# Field configuration (use standard ShotGrid schema defaults):
-# SHOTGRID_SHOT_FIELD: Link field from Version to Shot/Asset (default: "entity")
-# SHOTGRID_VERSION_FIELD: Version name/number field (default: "code")
+
+# =============================================================================
+# VEXA TRANSCRIPTION (Optional - Configure via Frontend Preferences)
+# =============================================================================
+VEXA_API_KEY=
+VEXA_API_URL=https://api.cloud.vexa.ai
+
+# =============================================================================
+# ADVANCED SETTINGS (Optional)
+# =============================================================================
+# ShotGrid field configuration (use defaults unless your schema is custom)
 SHOTGRID_SHOT_FIELD=entity
 SHOTGRID_VERSION_FIELD=code
 SHOTGRID_TYPE_FILTER=
+
+# Demo mode (anonymizes ShotGrid data)
 DEMO_MODE=false
 
-# Gmail Configuration
-GMAIL_SENDER=your-email@gmail.com
-
-# LLM API Keys
-GEMINI_API_KEY=your-gemini-api-key
-OPENAI_API_KEY=your-openai-api-key
-ANTHROPIC_API_KEY=your-anthropic-api-key
-
-# Testing
+# Disable LLM calls for testing
 DISABLE_LLM=false
+
+# Email configuration (for sending notes via email)
+GMAIL_SENDER=
+
+# =============================================================================
+# NOTE: The following are managed by the frontend and will be added automatically:
+# - OPENAI_PROMPT
+# - CLAUDE_PROMPT
+# - GEMINI_PROMPT
+# - INCLUDE_STATUSES
+# =============================================================================
