--- a/frontend/packages/app/package.json
+++ b/frontend/packages/app/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@dna/core": "*",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.90.2",
     "@tiptap/extension-link": "^3.15.3",
